@@ -18,8 +18,14 @@ Changes in Bitbake 1.8.x:
 	- Fix local fetcher's localpath return values
 	- Apply OVERRIDES before performing immediate expansions
 	- Allow the -b -e option combination to take regular expressions
+	- Add plain message function to bb.msg
+	- Sort the list of providers before processing so dependency problems are 
+	  reproducible rather than effectively random
+	- Add locking for fetchers so only one tries to fetch a given file at a given time
+	- Fix int(0)/None confusion in runqueue.py which causes random gaps in dependency chains
 	- Fix handling of variables with expansion in the name using _append/_prepend
 	  e.g. RRECOMMENDS_${PN}_append_xyz = "abc"
+       
 
 Changes in Bitbake 1.8.6:
 	- Correctly redirect stdin when forking
